# prediction-market-backtester

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  diff.txt  pyproject.toml
.github/workflows/: ci.yml
configs/favorite_longshot/: 20qty.yaml  50qty.yaml  default.yaml
scripts/: aggregate_batch_results.py  btc_timeframe.py  category_breakdown.py  filled_trades_analysis.py  index_data.py  index_recurring_trades.py  setup_data.sh  temporal_breakdown.py
src/pm_bt/: cli.py
src/pm_bt/common/: __init__.py  categories.py
src/pm_bt/data/: __init__.py  loaders.py  quality.py
src/pm_bt/execution/: __init__.py  simulator.py
src/pm_bt/reporting/: __init__.py  calibration.py  metrics.py  plots.py
src/pm_bt/scanner/checks/: consistency.py  whale.py
src/pm_bt/strategies/: __init__.py  favorite_longshot.py
tests/: test_calibration.py  test_categories.py  test_cli.py  test_data_loaders.py  test_data_quality.py  test_real_data_integration.py  test_reporting.py  test_scanner.py
