[project]
name = "prediction-market-backtester"
version = "0.1.0"
description = "Quant-style backtesting engine for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.20.0",
  "pydantic>=2.10.0",
  "pyarrow>=18.0.0",
  "numpy>=2.2.0",
  "matplotlib>=3.10.0",
]

[project.scripts]
pm-bt = "pm_bt.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "pytest>=9.0.2",
  "pre-commit>=4.5.1",
  "basedpyright>=1.37.4",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_bt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "recommended"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
